--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -20,8 +20,14 @@
     label:hover {
         cursor: pointer;
     }
+    .form-check-filtre {
+        &:first-child {
+            margin-bottom: 10px;
+        }
+    }
     .form-checked {
         background-color: #eee;
+        padding: 5px;
     }
     .checked+label:after {
         content: "";
@@ -29,7 +35,7 @@
         width: 20px;
         height: 20px;
         position: absolute;
-        left: 200px;
+        right: 5px;
         background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/OOjs_UI_icon_check-constructive.svg/1200px-OOjs_UI_icon_check-constructive.svg.png);
         background-size: 100%;
         pointer-events: none;
