--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -1,5 +1,4 @@
 .info-detailed {
-    margin-top: 20px;
     font-size: 14px;
     h2 {
         padding: 15px 0;
@@ -51,13 +50,19 @@
                     justify-content: space-between;
 
                 }
+                @media (max-width: 480px) {
+                    justify-content: space-around;
+
+                    > div {
+                        margin-bottom: 30px;
+                    }
+                }
             }
         }
     }
 }
 
 .product-accessories {
-    margin: 30px 0 0;
     padding: 30px 0;
     border-top: 1px solid #ccc;
     .h5 {
@@ -65,5 +70,6 @@
         text-transform: uppercase!important;
         font-size: 11px;
         font-family: RobotoMono Medium;
+        margin-bottom: 20px;
     }
 }
