--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -25,7 +25,8 @@
                     margin-right: 0;
                     margin-left: 0;
                     @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-                        margin: 0 -15px;
+                        margin: 0;
+                        height: 100%;
 
                     }
                     &::after {
@@ -33,7 +34,7 @@
                     }
 
                     > div {
-                        margin: 0;
+                        margin-bottom: 50px;
                     }
 
                     @media (max-width: 480px) {
@@ -73,6 +74,21 @@
                                     text-transform: lowercase;
                                     a {
                                         font-size: 24px;
+                                    }
+                                }
+                                .product-subtitle {
+                                    p {
+                                        margin: 0;
+                                    }
+                                }
+                                .recipe {
+                                    text-decoration: underline;
+                                    text-transform: uppercase;
+                                    font-size: 13px;
+                                    margin-top: 10px;
+
+                                    &:hover {
+                                        color: $blue;
                                     }
                                 }
                             }
