--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -75,10 +75,13 @@
     right: 20px;
   }
 }
-@media (min-width: 768px) and (max-width: 480px) {
-  #header .header-nav .row .header-bottom .search-widget {
+@media (min-width: 768px) and (max-width: 768px) {
+  #header .header-nav .row .header-bottom #search_widget {
     margin-top: 20px;
     width: 100%;
+  }
+  #header .header-nav .row .header-bottom #search_widget form .ui-autocomplete-input {
+    min-width: 100%;
   }
 }
 @media (min-width: 768px) {
@@ -148,7 +151,7 @@
     max-height: 80px;
   }
 }
-@media (max-width: 768px) and (max-width: 480px) {
+@media (max-width: 768px) and (max-width: 768px) {
   #header .header-nav .row .header-bottom .search-widget {
     margin-top: 20px;
     width: 100%;
@@ -171,15 +174,6 @@
     background-color: rgba(0, 0, 0, 0.05);
     border-radius: 5px;
     padding: 5px 10px;
-    position: relative;
-  }
-  #header .header-top .container #menu-icon ::after {
-    content: "pwip";
-    display: block;
-    float: right;
-  }
-  #header .header-top .container #mobile_top_menu_wrapper #_mobile_top_menu {
-    position: relative;
     position: relative;
   }
   #header .header-top .container #menu-icon ::after {
@@ -236,10 +230,6 @@
   padding-bottom: 20px;
 }
 .container #main #content .featured-products .row {
-  height: 450px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   margin-right: 0;
   margin-left: 0;
 }
@@ -255,7 +245,6 @@
 .container #main #content .featured-products .row > div {
   margin-bottom: 50px;
 }
-
 @media (max-width: 480px) {
   .container #main #content .featured-products .row {
     display: grid;
@@ -266,25 +255,10 @@
     width: 100%;
     margin-bottom: 60px;
   }
-}
-.container #main #content .featured-products .row .product-miniature {
-  margin: 0;
-  height: 100%;
-}
-@media (max-width: 480px) {
-  .container #main #content .featured-products .row .product-miniature {
-    height: 440px;
+  .container #main #content .featured-products .row .products > div article {
+    padding-bottom: 0;
+    margin-left: 0;
   }
-}
-.container #main #content .featured-products .row .product-miniature .thumbnail-container {
-  box-shadow: none;
-  width: 320px;
-  margin-bottom: 0;
-  
-}
-.container #main #content .featured-products .row .products > div article {
-  padding-bottom: 0;
-  margin-left: 0;
 }
 .container #main #content .featured-products .row .product-miniature {
   height: 100%;
@@ -316,7 +290,6 @@
 }
 .container #main #content .featured-products .row .product-miniature .thumbnail-container .product-description h3 a {
   font-size: 24px;
-<<<<<<< HEAD
 }
 .container #main #content .featured-products .row .product-miniature .thumbnail-container .product-description .product-subtitle p {
   margin: 0;
@@ -333,18 +306,6 @@
 .container #main #content .featured-products .row .product-miniature .thumbnail-container .highlighted-informations {
   box-shadow: none;
   display: none;
-=======
-}
-@media (max-width: 480px) {
-  .container #main #content .featured-products .row .product-miniature .thumbnail-container .product-description .product-price-and-shipping {
-    position: unset;
-  }
-}
-@media (min-width: 960px) {
-  .container #main #content .featured-products .row .product-miniature .thumbnail-container .product-description .product-price-and-shipping {
-    bottom: -10px;
-  }
->>>>>>> 5d9adbfb56249126c22360045ddb1ba7ce2aac12
 }
 @media (max-width: 480px) {
   .container #main #content .home-category-foot .categories-preview {
@@ -498,14 +459,6 @@
 }
 #wrapper .container .page-home #custom-text #custom-text-container {
   padding: 40px 20px;
-<<<<<<< HEAD
-=======
-}
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-  #wrapper .container #main .products {
-    justify-content: space-between;
-  }
->>>>>>> 5d9adbfb56249126c22360045ddb1ba7ce2aac12
 }
 @media (max-width: 480px) {
   #wrapper .container #main .products {
@@ -537,21 +490,12 @@
   .info-blocs {
     position: relative;
   }
-<<<<<<< HEAD
 
   .info-bloc {
     position: absolute;
     width: 49%;
   }
 
-=======
-
-  .info-bloc {
-    position: absolute;
-    width: 49%;
-  }
-
->>>>>>> 5d9adbfb56249126c22360045ddb1ba7ce2aac12
   .log-out {
     float: right;
     margin-top: 20px;
@@ -628,6 +572,25 @@
   background-size: 100%;
   pointer-events: none;
 }
+#js-product-list .products > div,
+.featured-products .products > div {
+  margin-bottom: 50px;
+  position: relative;
+}
+@media (max-width: 480px) {
+  #js-product-list .products > div article,
+.featured-products .products > div article {
+    height: auto;
+    padding-bottom: 20px;
+    margin-left: 20px;
+  }
+}
+#js-product-list .products > div article .product-price-and-shipping,
+.featured-products .products > div article .product-price-and-shipping {
+  position: absolute;
+  bottom: -25px;
+}
+
 .login-form form section .form-group:nth-child(3) {
   margin-bottom: 0;
 }
@@ -635,4 +598,37 @@
   .login-form form footer {
     text-align: center;
   }
+}
+#js-product-list .products > div,
+.featured-products .products > div {
+  margin-bottom: 50px;
+  position: relative;
+}
+@media (max-width: 480px) {
+  #js-product-list .products > div article,
+.featured-products .products > div article {
+    height: auto;
+    padding-bottom: 20px;
+    margin-left: 20px;
+  }
+}
+#js-product-list .products > div article .product-price-and-shipping,
+.featured-products .products > div article .product-price-and-shipping {
+  position: absolute;
+  bottom: -25px;
+}
+
+#blockcart-modal .modal-dialog .modal-body .row .cart-content .cart-content-btn a i {
+  font-size: 18px;
+}
+
+#wrapper .container #main .cart-grid .cart-grid-body .label {
+  position: relative;
+}
+#wrapper .container #main .cart-grid .cart-grid-body .label i {
+  position: absolute;
+  line-height: inherit;
+}
+#wrapper .container #main .cart-grid .cart-grid-body .label span {
+  margin-left: 25px;
 }
