--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -814,7 +814,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Unna-Regular';
+    font-family: 'Unna';
     font-weight: 300;
     margin-bottom: .5rem;
     line-height: 1.1;
