--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -229,10 +229,6 @@
   letter-spacing: 1px;
   padding-bottom: 20px;
 }
-.container #main #content .featured-products .row {
-  margin-right: 0;
-  margin-left: 0;
-}
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   .container #main #content .featured-products .row {
     margin: 0;
@@ -262,6 +258,7 @@
 }
 .container #main #content .featured-products .row .product-miniature {
   height: 100%;
+  position: relative;
 }
 .container #main #content .featured-products .row .product-miniature .thumbnail-container {
   box-shadow: none;
@@ -299,9 +296,16 @@
   text-transform: uppercase;
   font-size: 13px;
   margin-top: 10px;
+  position: absolute;
+  bottom: -10px;
+  z-index: 999;
+  height: auto;
 }
 .container #main #content .featured-products .row .product-miniature .thumbnail-container .product-description .recipe:hover {
   color: #2fb5d2;
+}
+.container #main #content .featured-products .row .product-miniature .thumbnail-container .product-description .product-price-and-shipping {
+  bottom: -35px;
 }
 .container #main #content .featured-products .row .product-miniature .thumbnail-container .highlighted-informations {
   box-shadow: none;
