--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -18,8 +18,6 @@
                     padding-bottom: 20px;
                 }
                 .row {
-                    margin-right: 0;
-                    margin-left: 0;
                     @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
                         margin: 0;
                         height: 100%;
@@ -48,6 +46,7 @@
                     }
                     .product-miniature {
                         height: 100%;
+                        position: relative;
                         .thumbnail-container {
                             box-shadow: none;
                             @media (max-width: 480px) {
@@ -82,10 +81,17 @@
                                     text-transform: uppercase;
                                     font-size: 13px;
                                     margin-top: 10px;
+                                    position: absolute;
+                                    bottom:-10px;
+                                    z-index:999;
+                                    height: auto;
 
                                     &:hover {
                                         color: $blue;
                                     }
+                                }
+                                .product-price-and-shipping {
+                                    bottom: -35px;
                                 }
                             }
                             .highlighted-informations {
