--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -195,6 +195,10 @@
                             li {
                                 a {
                                     font-weight: 400;
+
+                                    &:hover {
+                                        color: $blue;
+                                    }
                                 }
                             }
                         }
