--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -9593,6 +9593,7 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
     .product-miniature .products {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        grid-gap: 20px;
     }
 }
 
