--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -543,6 +543,9 @@
   text-align: center;
   font-size: 1.2em;
 }
+#search_filters .facet .facet-title {
+  overflow: visible;
+}
 
 #facet_section input[type=checkbox] {
   display: none;
