--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -54,17 +54,15 @@
                         position: absolute;
                         top: -130px;
                         right: 30%;
-
-                        @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+                        @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
                             top: -70px;
                             right: 20px;
-    
                         }
                         @media (max-width: 768px) {
                             margin-top: 20px;
                             width: 100%;
                             form {
-                               .ui-autocomplete-input {
+                                .ui-autocomplete-input {
                                     min-width: 100%;
                                 }
                             }
@@ -76,7 +74,7 @@
                         ul {
                             display: flex;
                             justify-content: space-between;
-                            @media only screen and (min-device-width : 768px) and (max-device-width : 1200px) {
+                            @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
                                 justify-content: center;
                                 flex-wrap: wrap;
                             }
@@ -105,7 +103,7 @@
     #header {
         .header-nav {
             border: none;
-            margin:0;
+            margin: 0;
             padding-bottom: 20px;
             .row {
                 .navigation-header {
@@ -125,7 +123,6 @@
                 }
                 .mobile {
                     position: relative;
-
                     #_mobile_cart {
                         position: absolute;
                         right: 10px;
@@ -138,21 +135,20 @@
                     }
                     #_mobile_logo {
                         a {
-                            img { 
+                            img {
                                 max-height: 80px;
                             }
                         }
                     }
                 }
                 .header-bottom {
-                    
                     .search-widget {
                         @media (max-width: 768px) {
                             margin-top: 20px;
                             width: 100%;
                             form {
                                 width: 100%;
-                               .ui-autocomplete-input {
+                                .ui-autocomplete-input {
                                     min-width: 100%;
                                 }
                             }
@@ -161,7 +157,6 @@
                 }
             }
         }
-
         .header-top {
             background-color: $white;
             .container {
@@ -169,13 +164,11 @@
                     display: block;
                     width: 100%;
                     margin-bottom: 20px;
-                    background-color: rgba(0,0,0,.05);
+                    background-color: rgba(0, 0, 0, .05);
                     border-radius: 5px;
                     padding: 5px 10px;
                     position: relative;
-
-                    ::after {
-                        content: "pwip";
+                    .expand-more {
                         display: block;
                         float: right;
                     }
@@ -204,4 +197,3 @@
         }
     }
 }
-
