--- a/assets/scss/categorie-grid.scss
+++ b/assets/scss/categorie-grid.scss
@@ -1,12 +1,9 @@
+@import "global.scss";
+
 #custom-categories-container {
     margin-top: 40px;
     .featured-block-title {
-        font-family: RobotoMono Medium;
-        font-size: 11px;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        text-align: center;
-        margin-bottom: 2rem;
+        @include title;
     }
 }
 
@@ -26,7 +23,7 @@
     img {
         max-width: 100%;
         height: 100%;
-        object-fit: cover
+        object-fit: cover;
     }
 }
 
