--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -7657,7 +7657,7 @@ textarea:active:-moz-placeholder {
 
 .custom-radio input[type=radio]:checked+span {
     display: block;
-    background-color: #2fb5d2;
+    background-color: #464646;
     width: 12px;
     height: 12px;
     border-radius: 50%;
@@ -8230,14 +8230,6 @@ body#checkout {
     color: #232323
 }
 
-body#checkout #header .header-nav {
-    max-height: none;
-    padding: .9375rem 0;
-    border: none;
-    margin-bottom: 0;
-    box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, .2)
-}
-
 body#checkout #header .header-nav .logo {
     max-height: 4.375rem;
     width: auto
@@ -8273,9 +8265,6 @@ body#checkout .container {
 }
 
 body#checkout section.checkout-step {
-    box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, .2);
-    background-color: #fff;
-    border-bottom: 1px solid rgba(0, 0, 0, .25);
     padding: .9375rem
 }
 
@@ -8283,10 +8272,19 @@ body#checkout section.checkout-step:last-child {
     border: 0
 }
 
+@media(min-width:768px) {
+    body#checkout section.checkout-step {
+        border: 1px solid;
+    }
+    body#checkout #js-checkout-summary {
+        border: 1px solid;
+    }
+}
+
 body#checkout section.checkout-step .step-title {
-    text-transform: uppercase;
     cursor: pointer;
-    margin-bottom: 0
+    margin-bottom: 20px;
+    font-size: 1.7rem;
 }
 
 body#checkout section.checkout-step .content {
@@ -8418,32 +8416,15 @@ body#checkout section.checkout-step .step-number {
     padding: .625rem
 }
 
-body#checkout section.checkout-step .address-selector {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: flex-start;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap
-}
-
 body#checkout section.checkout-step .address-item {
-    background: #f6f6f6;
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 49%;
-    flex: 0 0 49%;
-    margin-bottom: .625rem;
-    border: 3px solid transparent
+    display: inline-block;
+    width: 80%;
+    margin-bottom: 10px;
+    border: 2px solid #000
 }
 
 body#checkout section.checkout-step .address-item.selected {
     background: #fff;
-    border: 3px solid #2fb5d2
 }
 
 body#checkout section.checkout-step .address-alias {
@@ -8458,9 +8439,10 @@ body#checkout section.checkout-step .address {
 }
 
 body#checkout section.checkout-step .radio-block {
-    padding: .9375rem;
+    padding: 5px;
     text-align: left;
-    cursor: pointer
+    cursor: pointer;
+    margin-bottom: unset;
 }
 
 body#checkout section.checkout-step .custom-radio {
@@ -8474,7 +8456,7 @@ body#checkout section.checkout-step .custom-radio input[type=radio] {
 
 body#checkout section.checkout-step .delete-address,
 body#checkout section.checkout-step .edit-address {
-    color: #7a7a7a;
+    color: #464646;
     display: inline-block;
     margin: 0 .3125rem
 }
@@ -8716,10 +8698,8 @@ body#checkout #gift_message textarea {
 }
 
 body#checkout #footer {
-    box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, .2);
     padding: .9375rem;
-    background: #fff;
-    color: #7a7a7a
+    text-align: center;
 }
 
 body#checkout #delivery>label {
@@ -9571,6 +9551,12 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 .product-miniature .products {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    margin: unset;
+}
+
+.product-accessories .products>div {
+    position: relative;
 }
 
 @media screen and (min-width: 480px) {
@@ -9578,8 +9564,7 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
     .featured-products .products,
     .product-accessories .products,
     .product-miniature .products {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
     }
 }
 
@@ -9588,7 +9573,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
     .featured-products .products,
     .product-accessories .products,
     .product-miniature .products {
-        display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 20px;
     }
@@ -9617,15 +9601,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 .product-miniature .thumbnail-container {
     width: 100%;
     background: #fff;
-}
-
-@media screen and (max-width: 480px) {
-    #products .thumbnail-container,
-    .featured-products .thumbnail-container,
-    .product-accessories .thumbnail-container,
-    .product-miniature .thumbnail-container {
-        width: calc(100% - 30px);
-    }
 }
 
 #products .thumbnail-container:focus .highlighted-informations,
@@ -9710,6 +9685,8 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
     color: #232323;
     font-weight: 700;
     text-align: left;
+    position: absolute;
+    bottom: -20px;
 }
 
 #products .product-price-and-shipping .discount-product,
@@ -9760,13 +9737,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 .product-accessories .highlighted-informations .quick-view:hover,
 .product-miniature .highlighted-informations .quick-view:hover {
     color: #2fb5d2
-}
-
-#products .product-miniature,
-.featured-products .product-miniature,
-.product-accessories .product-miniature,
-.product-miniature .product-miniature {
-    margin: 0 .8125rem
 }
 
 #products .product-miniature .product-flags li.product-flag,
@@ -12778,9 +12748,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
         width: 100%;
         margin-top: 1rem
     }
-    #header {
-        background: #f1f1f1
-    }
     #header .header-nav {
         background: #fff;
         margin-bottom: .625rem;
@@ -12802,9 +12769,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
     #header .header-nav .user-info {
         text-align: left;
         margin-left: 0
-    }
-    #header .header-nav .user-info .logged {
-        color: #2fb5d2
     }
     #header .header-nav .blockcart {
         margin-left: 0;
@@ -12877,11 +12841,7 @@ input[type=number]::-webkit-outer-spin-button {
  */
 
 .progress-bar-wrapper {
-    width: 80%;
-    background: #ffffff;
-    margin: auto;
-    padding: 20px;
-    border-radius: 5px;
+    width: 100%;
 }
 
 .progress-bar {
@@ -12899,48 +12859,45 @@ input[type=number]::-webkit-outer-spin-button {
     z-index: 1;
 }
 
-.progress-bar li:before {
-    content: "I";
-    font-family: dreamspace;
+.progress-bar li span.material-icons {
     display: block;
     font-size: 10px;
-    line-height: 24px;
-    color: #d5dbdb;
+    height: 24px;
+    line-height: 20px;
+    color: #464646;
     background: #ffffff;
     width: 24px;
     border-radius: 50%;
     margin: 0 auto 5px auto;
-    border: 2px #d5dbdb solid;
+    border: 2px #464646 solid;
+    border-bottom: 1px solid;
+    cursor: pointer;
 }
 
-.progress-bar li:after {
+.progress-bar li.complete span.material-icons {
+    border: 2px #464646 solid;
+    background: #464646;
+}
+
+.progress-bar .complete span:before {
+    border-color: #464646;
+    content: "done";
+    font-size: 20px;
+    color: #fff;
+}
+
+.progress-bar li span.material-icons:after {
     content: "";
     width: 100%;
     height: 2px;
-    background: #d5dbdb;
+    background: black;
     position: absolute;
-    margin: auto;
-    left: 50%;
-    top: 13px;
+    top: 10px;
     z-index: -1;
 }
 
-.progress-bar li:last-child:after {
+.progress-bar li:last-child span.material-icons:after {
     display: none;
-}
-
-.progress-bar .complete:before {
-    color: #4dc5b1;
-    border-color: #4dc5b1;
-    content: "H";
-}
-
-.progress-bar .complete:after {
-    background: #4dc5b1;
-}
-
-.progress-bar .complete:last-child:after {
-    background: #d5dbdb;
 }
 
 #header .header-nav,
