--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -37,6 +37,7 @@
     width: 300px;
     position: absolute;
     right: 0;
+    top: 50px;
   }
   #header .header-nav .row .header-bottom {
     width: 100%;
