--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -43,6 +43,7 @@
                         width: 300px;
                         position: absolute;
                         right: 0;
+                        top: 50px;
                     }
                 }
                 .header-bottom {
