--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -2,6 +2,9 @@
     #filtre-name {
         text-align: center;
         font-size: 1.2em;
+        p {
+            margin: unset;
+        }
     }
     .facet {
         .facet-title {
